--- a/css/style.css
+++ b/css/style.css
@@ -247,12 +247,58 @@ body {
 
 /* Right menu */
 .right-menu {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    position: sticky;
-    top: -2180px;
+    display: none;
 }
+
+@media screen and (min-width: 1024px) {
+    .right-menu {
+        width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        position: sticky;
+        top: -2180px;
+    }
+}
+
+.right-menu__input-group {
+    position: sticky;
+    top: 0;
+    width: 80%;
+    padding: 5px 0px;
+    background-color: var(--white-color);
+}
+
+.right-menu__input-group label {
+    position: absolute;
+    top: 15px;
+    left: 20px;
+}
+
+.right-menu__input-group input {
+    outline: none;
+    display: block;
+    height: 45px;
+    padding-left: 50px;
+    border-radius: 50px;
+    background-color: var(--gray-color);
+    border: 1px solid var(--gray-color);
+    width: 100%;
+}
+
+.right-menu__input-group input::placeholder {
+    font-size: 1.1em;
+    color: var(--light-text-color);
+}
+
+.right-menu__input-group input:focus {
+    border: 1px solid var(--icon-twitter-color);
+    background-color: transparent;
+}
+
+.right-menu__input-group input:focus ~ label i {
+    color: var(--icon-twitter-color);
+}
+
 
