--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 :root {
     --gray-color: #eff3f4;
     --light-gray-color: #f7f9f9;
-    --hover-gray-color: #e6ecee;
+    --hover-gray-color: #f0f3f4;
     --icon-twitter-color: #1d9bf0;
     --black-color: #000;
     --text-color: #3b3f43;
@@ -262,7 +262,7 @@ body {
 @media screen and (min-width: 1024px) {
     .left-menu__profile {
         height: 65px;
-        width: 250px;
+        width: 230px;
     }
 
     .left-menu__profile-text {
@@ -302,7 +302,7 @@ body {
         flex-direction: column;
         align-items: center;
         position: sticky;
-        top: -2180px;
+        top: -80px;
     }
 }
 
@@ -313,6 +313,7 @@ body {
     width: 90%;
     padding: 5px 0px;
     background-color: var(--white-color);
+    z-index: 2;
 }
 
 .right-menu__input-group label {
@@ -378,12 +379,16 @@ body {
     padding: 15px 15px 10px;
 }
 
-.might-like__show-more {
+.show-more {
     font-size: 1em;
     font-weight: 400;
     color: var(--icon-twitter-color);
     display: block;
     padding: 15px 15px;
+}
+
+.show-more:hover {
+    background-color: var(--hover-gray-color);
 }
 
 .might-like a:hover {
@@ -423,3 +428,44 @@ body {
 .might-like__rows-text p {
     color: var(--light-text-color);
 }
+
+/* Right-menu trends */
+.right-menu__trends {
+    width: 90%;
+    border-radius: 15px;
+    background-color: var(--light-gray-color);
+    margin-top: 15px;
+    overflow: hidden;
+}
+
+.right-menu__trends h2 {
+    font-size: 1.2em;
+    font-weight: 800;
+    margin-bottom: 5px;
+    padding: 15px 15px 10px;
+}
+
+.right-menu__trends-rows {
+    padding: 10px 0 10px 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.right-menu__trends-rows:hover {
+    background-color: var(--hover-gray-color);
+}
+
+.right-menu__trends-text-1 {
+    color: var(--light-text-color);
+}
+
+.right-menu__trends-text-2 {
+    font-size: 1em;
+    font-weight: 500;
+    margin: 5px 0;
+}
+
+.right-menu__trends-icon i {
+    color: var(--text-color);
+}
+
