--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
     --gray-color: #eff3f4;
     --light-gray-color: #f7f9f9;
     --hover-gray-color: #f0f3f4;
+    --transparent-hover-gray-color: #f0f3f459;
     --icon-twitter-color: #1d9bf0;
     --black-color: #000;
     --text-color: #3b3f43;
@@ -287,7 +288,89 @@ body {
 /* Content */
 .content {
     width: 600px;
-    border: 1px solid red;
+    border-right: 1px solid var(--gray-color);
+}
+
+/* Content Header */
+.content__header {
+    padding: 10px 0;
+    padding-left: 15px;
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    position: sticky;
+    top: 0;
+}
+
+.content__header-icon {
+    font-size: 1.9em;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content__header-icon:hover {
+    background-color: var(--hover-gray-color);
+}
+
+.content__header-text h2 {
+    color: var(--black-color);
+    font-size: 1.3em;
+}
+
+.content__header-text svg {
+    margin-left: 4px;
+}
+
+.content__header-text p {
+    font-size: 0.8em;
+    color: var(--light-text-color);
+}
+
+/* Content Front page image */
+.content__front-page-img {
+    background-image: url("../img/front-page-img.jfif");
+    aspect-ratio: 27/9;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.content__profile-img {
+    background-image: url("../img/content-profile-img.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    border: 4px solid var(--white-color);
+    overflow: hidden;
+    position: relative;
+    height: 100px;
+    width: 100px;
+    top: 18vw;
+    left: 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .content__profile-img {
+        height: 140px;
+        width: 140px;
+        top: 135px;
+    }
+}
+
+.content__profile-img:hover::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--transparent-hover-gray-color);
+    z-index: 4;
 }
 
 /* Right menu */
@@ -302,7 +385,7 @@ body {
         flex-direction: column;
         align-items: center;
         position: sticky;
-        top: -80px;
+        top: -500px;
     }
 }
 
@@ -469,3 +552,32 @@ body {
     color: var(--text-color);
 }
 
+/* Right-menu footer */
+.right-menu__footer {
+    width: 90%;
+    margin-top: 5px;
+    padding: 10px 15px;
+}
+
+.right-menu__footer a {
+    margin-right: 12px;
+    line-height: 18px;
+    color: var(--light-text-color);
+    font-size: 0.9em;
+}
+
+.right-menu__footer a:hover {
+    text-decoration: underline;
+}
+
+.right-menu__footer i {
+    font-size: 0.8em;
+    margin-left: 2px;
+    margin-top: 2px;
+}
+
+.right-menu__footer strong {
+    color: var(--light-text-color);
+    font-size: 0.9em;
+    font-weight: 300;
+}
